fix(): title overflow (closes #44)

--- a/src/styles/window-top.sass
+++ b/src/styles/window-top.sass
@@ -49,7 +49,7 @@
       border-bottom: 1px solid #666
       margin-left: -1px
       min-width: 0px
-      
+
       &:first-child
         border-left: none
 
@@ -66,3 +66,5 @@
         text-overflow: ellipsis
         white-space: nowrap
         padding: 0 10px
+        text-overflow: ellipsis
+        overflow: hidden
